--- a/public/resources/code-examples/part-3/8-interfaces-abstract-classes/StockServer/Resources/server/index.html
+++ b/public/resources/code-examples/part-3/8-interfaces-abstract-classes/StockServer/Resources/server/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="index.js"></script>
   <meta charset="UTF-8">
+  <!-- <GoogleAnalytics measurementId={"G-M004BNHE32"} /> -->
   <title>stocksite</title>
 </head>
 
